--- a/catalogo.css
+++ b/catalogo.css
@@ -1,10 +1,18 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+
+}
+/* media queries  */
+@media screen and (max-width: 1100px) {
+    
+    /*  */
+
 }
 
 body{
-    background-color: #5B99C2;
+    background-color: #4184b4;
     
 }
 h1,h2,h3{
@@ -28,9 +36,8 @@ p{
 }
 .logo{
     width: 115px;
-    margin-top: -1px;
-    margin-left:160px;
-    margin-right: auto;
+    
+
 }
 
 nav{
@@ -104,11 +111,14 @@ nav{
     display: inline-block;
     width: 300px;
     margin: 25px;
-    border: 3px solid #ca5506 ;
     border-radius: 10px;
     transition: transform 0.3s, box-shadow 0.3s;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+    /*  */
 
+}
+.card:hover{
+    width: 320px;
 }
 .card-image{
     height: 300px;
@@ -118,9 +128,10 @@ nav{
 }
 .card:hover .card-image {
     filter: brightness(0.5); /* Escurece a imagem */
+    
 }
 .card-description {
-    background: #21528a;
+    background: #6c8fb3;
     padding: 10px;
     text-align: center;
 }
@@ -140,57 +151,127 @@ nav{
 }
 
 .card-1 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/firewhip.jpg);
+    background-image: url(img/firewhip.jpg);
 }
 .card-2 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/bigtower.jpg);
+    background-image: url(img/bigtower.jpg);
 }
 .card-3 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/star.jpeg);
+    background-image: url(img/star.jpeg);
 }
 .card-4 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/tchibum.jpg);
+    background-image: url(img/tchibum.jpg);
 }
 .card-5 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/barco.jpg);
+    background-image: url(img/barco.jpg);
 }
 .card-6 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/crazyriver.jpg);
+    background-image: url(img/crazyriver.jpg);
 }
 .card-7 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/rebulico.jpg);
+    background-image: url(img/rebulico.jpg);
     background-position: center;
 
 }
 .card-8 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/supersoak.jpeg);
+    background-image: url(img/supersoak.jpeg);
 }
 .card-9 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/spin2.jpg);
+    background-image: url(img/spin.jpg);
     background-position: center;
 }
 .card-10 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/tigor.jpg);
+    background-image: url(img/tigor.jpg);
     background-position: center;
 }
 .card-11 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/raskapuska.jpg);
+    background-image: url(img/raskapuska.jpg);
     background-position: center;
 }
 .card-12 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/hotwheels.jpg);
+    background-image: url(img/hotwheels.jpg);
     background-position: center;
 }
 .card-13 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/dinomagic.jpg);
+    background-image: url(img/dinomagic.jpg);
     background-position: center;
 }
 .card-14 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/roda.jpg);
+    background-image: url(img/roda.jpg);
     background-position: center;
 }
 .card-15 .card-image{
-    background-image: url(../CSS3_Fundamental-/img/carrossel.jpg);
+    background-image: url(img/carrossel.jpg);
     background-position: center;
 }
+
+
+
+.contact-container {
+    text-align: center;
+    padding-top: 5em;
+    padding-bottom: 2em;
+}
+
+.contact-container h2{
+    font-size: 36px;
+}
+
+.contact-container p{
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+.contact-container input, .contact-container textarea{
+    width: 200px;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #CCC;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+}
+
+.contact-container textarea{
+    display: block;
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
+    width: 468px;
+    height: 150px;
+}
+
+.contact-container input[type=submit]{
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #042161;
+    color: #FFF;
+    transition: 0.5s;
+    transition: transform 0.3s, box-shadow 0.3s;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+    
+}
+.contact-container input[type=submit]:hover{
+    background-color: #2c96c7;
+}
+
+/* footer */
+
+footer{
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+.social-icons {
+    display: flex;
+    justify-content:center;
+    font-size: 20px; 
+    color: #333; 
+    display: flex;
+    gap: 15px; 
+}
+
+
 
